--- a/src/app/pages/b2c-voucher/index/list-voucher-reimbursement/list-voucher-reimbursement.component.html
+++ b/src/app/pages/b2c-voucher/index/list-voucher-reimbursement/list-voucher-reimbursement.component.html
@@ -95,15 +95,9 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama Voucher B2C" prop="voucher_consumer_name">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a class="direct-edit">{{row.voucher_consumer_name}} </a>
-          </ng-template>
-        </ngx-datatable-column>
-
         <ngx-datatable-column name="Retailer Code" prop="code">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a>{{row.code}}</a>
+            <a class="direct-edit">{{row.code}} </a>
           </ng-template>
         </ngx-datatable-column>
 
@@ -129,13 +123,7 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.type_name}}
           </ng-template>
-        </ngx-datatable-column>
-
-        <ngx-datatable-column name="Nama Voucher B2B" prop="voucher_name">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a>{{row.voucher_name}} </a>
-          </ng-template>
-        </ngx-datatable-column>
+        </ngx-datatable-column>s
 
         <ngx-datatable-column name="Nominal Penukaran" prop="nominal">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
