--- a/src/app/pages/dte/audience/edit/audience-edit.component.html
+++ b/src/app/pages/dte/audience/edit/audience-edit.component.html
@@ -138,7 +138,7 @@
           </div>
         </form>
       </div>
-      <!-- <div
+      <div
         fxLayout="row wrap"
         fxLayoutAlign="end stretch"
         fxLayout.lt-md="column"
@@ -156,7 +156,7 @@
         >
           Load Data
         </button>
-      </div> -->
+      </div>
       <form [formGroup]="formFilter" autoComplete="off">
         <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="pt-16"
           fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
@@ -290,7 +290,7 @@
               *ngIf="!isDetail"
             >
             </mat-checkbox>
-          </ng-template> 
+          </ng-template>
 
           <ng-template
             ngx-datatable-cell-template
