--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -166,6 +166,7 @@
                   <input matInput type="text" placeholder="Batasan Berdasarkan Produk" [disabled]="true">
                 </mat-form-field>
 
+                <!-- fitur multiple category -->
                 <mat-form-field fxFlex="50">
                   <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category"
                     [disabled]="!formDetilVoucher.get('limit_by_category').value" multiple>
