--- a/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.html
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="end center" *ngIf="!isDetail">
+    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="end center">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20" (click)="confirmUpdateStatusVoucher()" *ngIf="detailVoucher?.status == 'publish'">
         UNPUBLISH
       </button>
