--- a/src/app/pages/settings/role/edit/role-edit.component.html
+++ b/src/app/pages/settings/role/edit/role-edit.component.html
@@ -86,7 +86,8 @@
               <div class="answer" *ngIf="items.nama !== 'task verification'">
                 <div fxLayout="row wrap" fxLayoutAlign="start center">
                   <div fxFlex="25" *ngFor="let item of items.value">
-                    <div class="access-name">{{item.nama | toCapitalize}}</div>
+                    <div class="access-name" *ngIf="item.nama == 'gsw'">{{item.nama | uppercase}}</div>
+                    <div class="access-name" *ngIf="item.nama !== 'gsw'">{{item.nama | toCapitalize}}</div>
                     <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="item.status" [disabled]="isDetail" (change)="onToggleChange(item, items, role, $event)"></mat-slide-toggle>
                   </div>
                 </div>
