Add padding to notification status

--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -654,7 +654,7 @@
 
         </div>
 
-        <div fxLayout="row">
+        <div class="pt-16" fxLayout="row">
           <mat-form-field fxFlex="45" class="is-light form-primary">
             <mat-select placeholder="Status" formControlName="status">
               <mat-option value="Active">Active</mat-option>
