fix: B2C Enhancement - nama voucher b2c n b2b - bugs auto sett tab reimbursement

--- a/src/app/pages/b2c-voucher/index/list-voucher-reimbursement/list-voucher-reimbursement.component.html
+++ b/src/app/pages/b2c-voucher/index/list-voucher-reimbursement/list-voucher-reimbursement.component.html
@@ -95,9 +95,9 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama Voucher B2C" prop="voucher_consumer_name">
+        <ngx-datatable-column name="Nama Voucher B2C" prop="voucher_name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a class="direct-edit">{{row.voucher_consumer_name}} </a>
+            <a class="direct-edit">{{row.voucher_name}} </a>
           </ng-template>
         </ngx-datatable-column>
 
@@ -131,9 +131,9 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama Voucher B2B" prop="voucher_name">
+        <ngx-datatable-column name="Nama Voucher B2B" prop="business_voucher_name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a>{{row.voucher_name}} </a>
+            <a>{{row.business_voucher_name}} </a>
           </ng-template>
         </ngx-datatable-column>
 
