--- a/src/app/pages/user-management/paguyuban/create/paguyuban-create.component.html
+++ b/src/app/pages/user-management/paguyuban/create/paguyuban-create.component.html
@@ -41,7 +41,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field fxFlex="100" class="is-light">
+              <mat-form-field fxFlex="100" class="is-light mb-24">
                 <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi">
                 <input matInput type="password" *ngIf="!showPassword" formControlName="password"
                   placeholder="Kata Sandi">
@@ -54,10 +54,23 @@
                   *ngIf="verticalStepperStep1.controls['password'].hasError('required') && verticalStepperStep1.controls['password'].touched">
                   Kata sandi harus diisi.
                 </mat-error>
-                <mat-error *ngIf="verticalStepperStep1.controls['password'].hasError('notValid')">
+                <!-- <mat-error *ngIf="verticalStepperStep1.controls['password'].hasError('notValid')">
                   Kata sandi Anda setidaknya harus memiliki, Panjang 8 karakter, 1 huruf besar & 1 karakter huruf kecil
                   & 1 angka
+                </mat-error> -->
+                <mat-error *ngIf="
+                (verticalStepperStep1.controls['password'].hasError('minlength') && verticalStepperStep1.controls['password'].touched) ||
+                (verticalStepperStep1.controls['password'].hasError('strong') && verticalStepperStep1.controls['password'].touched) ||
+                (verticalStepperStep1.controls['password'].hasError('specialchar') && verticalStepperStep1.controls['password'].touched)">
+                  Kata sandi Anda setidaknya harus memiliki, Panjang 8 karakter, 1 huruf besar & 1 karakter huruf kecil
+                  & 1 angka & 1 spesial karakter
                 </mat-error>
+                <!-- <mat-error *ngIf="forgotPasswordForm.controls['password'].hasError('strong') && forgotPasswordForm.controls['password'].touched">
+                  Kata Sandi harus mengandung huruf besar dan huruf kecil dan angka
+                </mat-error>
+                <mat-error *ngIf="forgotPasswordForm.controls['password'].hasError('specialchar') && forgotPasswordForm.controls['password'].touched">
+                  Kata Sandi harus mengandung spesial karakter
+                </mat-error> -->
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light">
                 <input matInput type="text" *ngIf="showConfirmPassword" formControlName="password_confirmation"
@@ -79,7 +92,7 @@
                   *ngIf="!verticalStepperStep1.controls['password_confirmation'].hasError('required') && verticalStepperStep1.controls['password_confirmation'].touched && verticalStepperStep1.controls['password_confirmation'].hasError('notSame')">
                   Konfirmasi kata sandi tidak sesuai.
                 </mat-error> -->
-                <mat-error *ngIf="verticalStepperStep1.hasError('notMatch') && changePassword.controls['password_confirmation'].touched">
+                <mat-error *ngIf="verticalStepperStep1.hasError('notMatch') && verticalStepperStep1.controls['password_confirmation'].touched">
                   Konfirmasi kata sandi tidak sesuai.
                 </mat-error>
               </mat-form-field>
